# cpsc490

hw3_starter/: proxy.hpp  tests_pipe.cpp  tests_product.cpp
hw4_starter/: CMakeLists.txt  to_complete.cpp  to_fix.cpp  to_fix.txt
